--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
