--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/faker": "^5.5.7",
     "@types/jest": "^26.0.24",
     "@types/joi": "^17.2.3",
     "@types/node": "^16.3.3",
     "@types/pg": "^8.6.1",
     "@types/supertest": "^2.0.11",
+    "faker": "^5.5.3",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "supertest": "^6.1.3",
