--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "get-youtube-id": "^1.0.1",
     "joi": "^17.4.1",
     "pg": "^8.6.0"
   }
