--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test npx jest -i",
     "build": "npx tsc --outDir dist",
-    "start": "NODE_ENV=production node dist/server.js",
+    "start": "node dist/server.js",
     "postinstall": "npm run build",
     "dev": "NODE_ENV=dev npx nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/server.ts\""
   },
